[gd_scene load_steps=24 format=2]

[ext_resource path="res://import/2d/text_sprites/title_screen/exit_game-hover.png" type="Texture" id=1]
[ext_resource path="res://import/2d/title_screen/island - blur.png" type="Texture" id=2]
[ext_resource path="res://import/2d/text_sprites/title_screen/new_game.png" type="Texture" id=3]
[ext_resource path="res://import/2d/text_sprites/title_screen/tutorial.png" type="Texture" id=4]
[ext_resource path="res://scripts/screen_title.gd" type="Script" id=5]
[ext_resource path="res://import/2d/text_sprites/title_screen/settings.png" type="Texture" id=6]
[ext_resource path="res://import/2d/title_screen/bird.png" type="Texture" id=7]
[ext_resource path="res://import/2d/title_screen/bg_gradient.jpg" type="Texture" id=8]
[ext_resource path="res://import/2d/text_sprites/title_screen/new_game-hover.png" type="Texture" id=9]
[ext_resource path="res://import/2d/text_sprites/title_screen/tutorial-hover.png" type="Texture" id=10]
[ext_resource path="res://import/2d/text_sprites/title_screen/exit_game.png" type="Texture" id=11]
[ext_resource path="res://import/2d/text_sprites/title_screen/new_game_sm.png" type="Texture" id=12]
[ext_resource path="res://import/2d/text_sprites/title_screen/new_game_sm-hover.png" type="Texture" id=13]
[ext_resource path="res://import/2d/icons/icon_x.png" type="Texture" id=14]
[ext_resource path="res://import/2d/icons/icon_x-hover.png" type="Texture" id=15]
[ext_resource path="res://import/2d/text_sprites/title_screen/load_game.png" type="Texture" id=16]
[ext_resource path="res://import/2d/text_sprites/title_screen/load_game-hover.png" type="Texture" id=17]
[ext_resource path="res://import/2d/text_sprites/title_screen/settings-hover.png" type="Texture" id=19]
[ext_resource path="res://scenes/screen_settings.tscn" type="PackedScene" id=20]

[sub_resource type="Animation" id=1]
resource_name = "Fade_In"
length = 3.0
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 3 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 3 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 3 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 3 )
}

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.498039 )
border_width_left = 10
border_color = Color( 0.8, 0.8, 0.8, 0 )
border_blend = true
corner_detail = 1

[sub_resource type="Animation" id=3]
resource_name = "Gamelist_SlideIn"
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("gamelist_container:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 500, -0.25, 0, 0.25, 0, 25, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}

[sub_resource type="Animation" id=4]
resource_name = "newgame_input_shake"
tracks/0/type = "bezier"
tracks/0/path = NodePath("gamelist_container/HBoxContainer/newgame_name_input:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 3.5, -0.25, 0, 0.25, 0, -2.5, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.7, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("gamelist_container/HBoxContainer/save_newgame_button:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -15, -0.25, 0, 0.25, 0, 15, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.7, 1 )
}

[node name="Title Screen" type="Control" groups=[
"current_level",
]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BgGradient" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -640.0
margin_right = 640.0
margin_bottom = 640.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="island_blur" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -400.0
margin_top = -498.0
margin_right = 400.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="container" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="margin" type="MarginContainer" parent="container"]
margin_right = 97.0
margin_bottom = 600.0
custom_constants/margin_right = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="version_label" type="Label" parent="container/margin"]
margin_left = 25.0
margin_top = 561.0
margin_right = 72.0
margin_bottom = 575.0
size_flags_vertical = 8
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.498039 )
text = "v. 0.1.0"

[node name="panel 1" type="MarginContainer" parent="container"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 101.0
margin_right = 577.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 100
custom_constants/margin_bottom = 100

[node name="Button List" type="VBoxContainer" parent="container/panel 1"]
margin_top = 100.0
margin_right = 476.0
margin_bottom = 500.0
size_flags_vertical = 3
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="container/panel 1/Button List"]
margin_right = 476.0
margin_bottom = 364.0
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="newgame_open_button" type="TextureButton" parent="container/panel 1/Button List/VBoxContainer" groups=[
"regular_button",
]]
margin_right = 476.0
margin_bottom = 84.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 9 )

[node name="loadgame_open_button" type="TextureButton" parent="container/panel 1/Button List/VBoxContainer" groups=[
"regular_button",
]]
margin_left = 99.0
margin_top = 104.0
margin_right = 377.0
margin_bottom = 153.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 16 )
texture_hover = ExtResource( 17 )

[node name="HSeparator" type="HSeparator" parent="container/panel 1/Button List/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 173.0
margin_right = 476.0
margin_bottom = 190.0
size_flags_vertical = 3

[node name="tutorial_button" type="TextureButton" parent="container/panel 1/Button List/VBoxContainer" groups=[
"regular_button",
]]
margin_left = 138.0
margin_top = 210.0
margin_right = 338.0
margin_bottom = 255.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 10 )

[node name="HSeparator2" type="HSeparator" parent="container/panel 1/Button List/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 275.0
margin_right = 476.0
margin_bottom = 292.0
size_flags_vertical = 3

[node name="settings_button" type="TextureButton" parent="container/panel 1/Button List/VBoxContainer" groups=[
"regular_button",
]]
margin_left = 136.0
margin_top = 312.0
margin_right = 339.0
margin_bottom = 364.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 19 )

[node name="exit_button" type="TextureButton" parent="container/panel 1/Button List" groups=[
"regular_button",
]]
margin_left = 159.0
margin_top = 368.0
margin_right = 317.0
margin_bottom = 400.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 11 )
texture_hover = ExtResource( 1 )

[node name="buttons_animation" type="AnimationPlayer" parent="container/panel 1"]
anims/Fade_In = SubResource( 1 )

[node name="panel 2" type="Control" parent="container"]
margin_left = 581.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Foreground_Bird" type="TextureRect" parent="container/panel 2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -375.0
margin_top = -64.5
margin_right = 375.0
margin_bottom = 64.5
rect_rotation = -5.0
rect_pivot_offset = Vector2( 375, 0 )
mouse_filter = 2
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gamelist_panel" type="Panel" parent="container/panel 2"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="margin" type="MarginContainer" parent="container/panel 2/gamelist_panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_right = 3.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gamelist_container" type="VBoxContainer" parent="container/panel 2/gamelist_panel/margin"]
margin_left = 25.0
margin_top = 25.0
margin_right = 418.0
margin_bottom = 575.0
size_flags_vertical = 3
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gamelist_close_button" type="TextureButton" parent="container/panel 2/gamelist_panel/margin/gamelist_container" groups=[
"regular_button",
]]
margin_left = 370.0
margin_right = 393.0
margin_bottom = 21.0
size_flags_horizontal = 8
size_flags_vertical = 0
texture_normal = ExtResource( 14 )
texture_hover = ExtResource( 15 )

[node name="gamelist_label" type="Label" parent="container/panel 2/gamelist_panel/margin/gamelist_container"]
margin_top = 31.0
margin_right = 393.0
margin_bottom = 45.0
size_flags_horizontal = 3
text = "Saved Games"

[node name="-------------------1" type="HSeparator" parent="container/panel 2/gamelist_panel/margin/gamelist_container"]
modulate = Color( 1, 1, 1, 0.141176 )
margin_top = 55.0
margin_right = 393.0
margin_bottom = 75.0
custom_constants/separation = 20

[node name="Control" type="Control" parent="container/panel 2/gamelist_panel/margin/gamelist_container"]
margin_top = 85.0
margin_right = 393.0
margin_bottom = 477.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gamelist_list" type="VBoxContainer" parent="container/panel 2/gamelist_panel/margin/gamelist_container/Control"]
anchor_right = 1.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="-------------------2" type="HSeparator" parent="container/panel 2/gamelist_panel/margin/gamelist_container"]
modulate = Color( 1, 1, 1, 0.141176 )
margin_top = 487.0
margin_right = 393.0
margin_bottom = 507.0
custom_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="container/panel 2/gamelist_panel/margin/gamelist_container"]
margin_top = 517.0
margin_right = 393.0
margin_bottom = 550.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="newgame_name_input" type="LineEdit" parent="container/panel 2/gamelist_panel/margin/gamelist_container/HBoxContainer"]
margin_right = 202.0
margin_bottom = 33.0
size_flags_horizontal = 3
text = "New Adventure_1"
align = 1

[node name="VSeparator" type="VSeparator" parent="container/panel 2/gamelist_panel/margin/gamelist_container/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 206.0
margin_right = 226.0
margin_bottom = 33.0
custom_constants/separation = 20

[node name="save_newgame_button" type="TextureButton" parent="container/panel 2/gamelist_panel/margin/gamelist_container/HBoxContainer" groups=[
"regular_button",
]]
margin_left = 230.0
margin_right = 393.0
margin_bottom = 33.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 12 )
texture_hover = ExtResource( 13 )

[node name="gamelist_animation" type="AnimationPlayer" parent="container/panel 2/gamelist_panel/margin"]
anims/Gamelist_SlideIn = SubResource( 3 )
anims/newgame_input_shake = SubResource( 4 )

[node name="Settings Screen" parent="." instance=ExtResource( 20 )]
visible = false
[connection signal="pressed" from="container/panel 1/Button List/VBoxContainer/newgame_open_button" to="." method="_on_newgame_open_button_pressed"]
[connection signal="pressed" from="container/panel 1/Button List/VBoxContainer/loadgame_open_button" to="." method="_on_loadgame_open_button_pressed"]
[connection signal="pressed" from="container/panel 1/Button List/VBoxContainer/tutorial_button" to="." method="_on_tutorial_button_pressed"]
[connection signal="pressed" from="container/panel 1/Button List/VBoxContainer/settings_button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="container/panel 1/Button List/exit_button" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="container/panel 2/gamelist_panel/margin/gamelist_container/gamelist_close_button" to="." method="_on_Button_Close_pressed"]
[connection signal="pressed" from="container/panel 2/gamelist_panel/margin/gamelist_container/HBoxContainer/save_newgame_button" to="." method="_on_save_newgame_button_pressed"]
